# coc-tracker

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  bot.py  coc-tracker.service  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
coc_tracker/: __init__.py  api.py  backup.py  cli.py  config.py  handlers.py  keyboard.py  main.py  storage.py  tracker.py
tests/: conftest.py  test_api_retry.py  test_backup.py  test_cli.py  test_cli_disk.py  test_storage.py
